Refine "grateful" wording for donors and developers in the closing

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -167,8 +167,8 @@ turns protocols into growing ecosystems. By funding tools for creators,
 communities, infrastructure, and distributed collaboration, OpenSats is doing
 its part to support the underlying strength of nostr's long-term viability.
 
-We are grateful to our donors who make these grants possible and to the
-developers building open-source technology.
+We are grateful to our donors for making these grants possible and to the
+developers advancing open-source technology.
 
 <center>
     <DonateRecurringButton/>
