Update date and authors

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Thirteenth Wave of Nostr Grants"
-date: '2025-10-29'
+date: '2025-11-04'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
-authors: ['default', 'arvin']
+authors: ['default', 'arvin', 'dergigi']
 images: ['/static/images/blog/87-thirteenth-wave-of-nostr-grants.jpg']
 draft: false
 summary: "OpenSats is funding nine more open-source projects advancing the nostr ecosystem."
