Update project focus areas in intro section
Update based on Keydex

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -12,8 +12,8 @@ We are pleased to announce the latest wave of grants from The Nostr Fund, dedica
 to advancing the nostr ecosystem by supporting builders working to make nostr more 
 accessible, secure, and resilient.
 
-In this wave, we highlight four projects that span creator tools, community
-infrastructure, archival systems, and distributed collaboration. Five additional
+In this wave, we highlight four projects that span creator tools, data security
+and recovery, archival systems, and distributed collaboration. Five additional
 projects outlined below have received renewal grants to continue their work.
 Supporting these projects reflects our belief that resilient open-source
 software is a public good. Once built, it can be reused, adapted, and scaled by
