Simplify donor acknowledgment text in thirteenth wave blog post

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -34,11 +34,8 @@ Grant renewals:
 - 0xchat ([Oct. 2023])
 - Damus ([Jul. 2023])
 
-This support is made possible by the generosity of donors who believe in an open, 
-censorship-resistant communications layer for the internet, and by the builders 
-turning that vision into reality.
-
-To help strengthen the nostr ecosystem, please consider donating to The Nostr Fund.
+The generosity of our donors is what makes these grants possible. If you care
+about a free and open internet, please consider donating to The Nostr Fund.
 
 <center>
     <DonateToNostrFundButton/>
