Fix punctuation in Keydex section: replace semicolon with period

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -79,7 +79,7 @@ License: MIT
 Keydex is an open-source backup and recovery tool for sensitive data, including
 passwords, digital wills, and cryptographic keys. Instead of storing full copies
 in one place, Keydex uses [Shamir’s Secret Sharing] to split a secret into
-pieces and distribute them to friends and family; recovery happens only when
+pieces and distribute them to friends and family. Recovery happens only when
 enough participants consent to reassemble the secret. The app is built with
 [Flutter] for cross-platform delivery and is currently in the alpha stage of
 development.
