Remove PostgreSQL link from Bigbrotr section

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -102,7 +102,7 @@ License: MIT
 [Bigbrotr] is a modular, open-source infrastructure for archiving and monitoring
 the nostr network. It enables structured analysis of public events and relay
 activity across Clearnet and Tor, offering a transparent view of network
-behavior and health. Built as containerized services with [PostgreSQL] for data
+behavior and health. Built as containerized services with PostgreSQL for data
 management, it includes a synchronizer for event indexing, a monitor for relay
 responsiveness and metadata including [NIP-11] and [NIP-66], and a finder for
 discovering new relays. Designed for research and interoperability, Bigbrotr's
@@ -123,7 +123,6 @@ Repository: [Bigbrotr/bigbrotr]
 License: MIT
 
 [Bigbrotr]: https://bigbrotr.com/
-[PostgreSQL]: https://www.postgresql.org/about/
 [NIP-11]: https://github.com/nostr-protocol/nips/blob/master/11.md
 [NIP-66]: https://github.com/nostr-protocol/nips/blob/master/66.md
 [Data Vending Machine]: https://github.com/nostr-protocol/nips/blob/bcaad2957d0e9cec20e4265298d2788be87d3190/90.md
