--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -132,7 +132,7 @@ License: MIT
 
 [Grasp] is a distributed, nostr-native alternative to centralized git hosting
 platforms. Developed by returning grantee [Dan
-Conway,](/blog/nostr-grants-july-2023#code-collaboration-over-nostr) who
+Conway](/blog/nostr-grants-july-2023#code-collaboration-over-nostr), who
 previously created a git-over-nostr proof of concept, the Grasp project extends
 that work by applying nostr’s event-based authorization and relay architecture
 to version control. Built around [NIP-34], it allows repository actions such as
