Refactor Grasp section to reference ngit project with link

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -132,9 +132,8 @@ License: MIT
 
 [Grasp] is a distributed, nostr-native alternative to centralized git hosting
 platforms. Developed by returning grantee [Dan
-Conway](/blog/nostr-grants-july-2023#code-collaboration-over-nostr), who
-previously created a git-over-nostr proof of concept, the Grasp project extends
-that work by applying nostr’s event-based authorization and relay architecture
+Conway](/blog/nostr-grants-july-2023#code-collaboration-over-nostr), the Grasp project extends
+his previous work on [ngit] by applying nostr’s event-based authorization and relay architecture
 to version control. Built around [NIP-34], it allows repository actions such as
 pushes and state updates to be authorized and verified directly through signed
 nostr events, removing the need for centralized intermediaries.
@@ -151,6 +150,7 @@ Repository: [danconwaydev.com/grasp]
 License: MIT
 
 [Grasp]: https://ngit.dev/grasp/#why
+[ngit]: https://github.com/DanConwayDev/ngit-cli
 [NIP-34]: https://github.com/nostr-protocol/nips/blob/master/34.md
 [danconwaydev.com/grasp]: https://gitworkshop.dev/danconwaydev.com/grasp
 
