Update closing gratitude paragraph to emphasize all donors and Nostr ecosystem

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -161,8 +161,8 @@ turns protocols into growing ecosystems. By funding tools for creators,
 communities, infrastructure, and distributed collaboration, OpenSats is doing
 its part to support the underlying strength of nostr's long-term viability.
 
-We are grateful to our donors for making these grants possible and to the
-developers advancing open-source technology.
+Our gratitude goes to all of our donors—big and small—who make these grants
+possible, and to the developers pushing the Nostr open‑source ecosystem forward.
 
 <center>
     <DonateRecurringButton/>
