Reorganize closing section: move gratitude before donate button, refactor foundational work paragraph

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -156,17 +156,19 @@ License: MIT
 
 ---
 
-The projects in this wave are examples of the kind of foundational work that
-turns protocols into growing ecosystems. By funding tools for creators,
-communities, infrastructure, and distributed collaboration, OpenSats is doing
-its part to support the underlying strength of nostr's long-term viability.
-
 Our gratitude goes to all of our donors—big and small—who make these grants
 possible, and to the developers pushing the Nostr open‑source ecosystem forward.
+Join us in strengthening Nostr’s long‑term future by becoming a recurring
+supporter today:
 
 <center>
     <DonateRecurringButton/>
 </center>
 
-​If you are a developer working on nostr projects, please consider [applying for
-funding](/apply).
+The projects in this wave illustrate how foundational work can turn protocols
+into thriving ecosystems. By funding tools for creators, communities,
+infrastructure, and distributed collaboration, OpenSats helps strengthen the
+long‑term viability of the Nostr ecosystem.
+
+​If you are a developer working on free and open-source nostr projects, please
+consider to [apply for funding](/apply).
