Emphasize 'The Nostr Fund' in italics

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -8,7 +8,7 @@ draft: false
 summary: "OpenSats is funding nine more open-source projects advancing the nostr ecosystem."
 ---
 
-We are pleased to announce the latest wave of grants from The Nostr Fund, dedicated 
+We are pleased to announce the latest wave of grants from *The Nostr Fund*, dedicated 
 to advancing the nostr ecosystem by supporting builders working to make nostr more 
 accessible, secure, and resilient.
 
@@ -35,7 +35,7 @@ Grant renewals:
 - Damus ([Jul. 2023])
 
 The generosity of our donors is what makes these grants possible. If you care
-about a free and open internet, please consider donating to The Nostr Fund.
+about a free and open internet, please consider donating to *The Nostr Fund*.
 
 <center>
     <DonateToNostrFundButton/>
