Change 'Nostr' to lowercase except in 'The Nostr Fund' and product names

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Thirteenth Wave of Nostr Grants"
+title: "Thirteenth Wave of nostr Grants"
 date: '2025-11-05'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 authors: ['default', 'arvin', 'dergigi']
@@ -157,8 +157,8 @@ License: MIT
 ---
 
 Our gratitude goes to all of our donors—big and small—who make these grants
-possible, and to the developers pushing the Nostr open‑source ecosystem forward.
-Join us in strengthening Nostr’s long‑term future by becoming a recurring
+possible, and to the developers pushing the nostr open‑source ecosystem forward.
+Join us in strengthening nostr's long‑term future by becoming a recurring
 supporter today:
 
 <center>
@@ -168,7 +168,7 @@ supporter today:
 The projects in this wave illustrate how foundational work can turn protocols
 into thriving ecosystems. By funding tools for creators, communities,
 infrastructure, and distributed collaboration, OpenSats helps strengthen the
-long‑term viability of the Nostr ecosystem.
+long‑term viability of the nostr ecosystem.
 
 ​If you are a developer working on free and open-source nostr projects, please
 consider to [apply for funding](/apply).
