Revert title to use capitalized 'Nostr'

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Thirteenth Wave of nostr Grants"
+title: "Thirteenth Wave of Nostr Grants"
 date: '2025-11-05'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 authors: ['default', 'arvin', 'dergigi']
