Improve formatting of Robos' biography
Reformatted Robos' bio for better readability.

--- a/data/authors/robos.mdx
+++ b/data/authors/robos.mdx
@@ -9,7 +9,11 @@ email: rob@opensats.org
 ops: true
 ---
 
-Robos firmly believes Bitcoin and Nostr will continue to transform the world for the better. He is an experienced software project manager who has led projects across the globe but ended up in the mountains of Japan, immersed in the language and culture. He wants to see Bitcoin and Nostr flourish across Japan, and also runs [Bush Bash Japan](https://bushbashjapan.fyi/).
+Robos firmly believes Bitcoin and Nostr will continue to transform the world for
+the better. He is an experienced software project manager who has led projects
+across the globe but ended up in the mountains of Japan, immersed in the
+language and culture. He wants to see Bitcoin and Nostr flourish across Japan,
+and also runs [Bush Bash Japan](https://bushbashjapan.fyi/).
 
 ---
 
