Update blog post author reference from rob to robos

--- a/data/blog/bitcoin-grants-feb-2024.mdx
+++ b/data/blog/bitcoin-grants-feb-2024.mdx
@@ -3,7 +3,7 @@ title: "Fourth Wave of Bitcoin Grants"
 date: '2024-02-25'
 tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
-authors: ['rob', 'dergigi']
+authors: ['robos', 'dergigi']
 images: ['/static/images/blog/24-bitcoin-feb.jpg']
 summary: "OpenSats is funding 8 more open-source projects in the bitcoin ecosystem."
 ---
