Rename rob.jpg to robos.jpg and update avatar path

--- a/data/authors/robos.mdx
+++ b/data/authors/robos.mdx
@@ -1,7 +1,7 @@
 ---
 name: robos
 nym: robos
-avatar: /static/images/ops/rob.jpg
+avatar: /static/images/ops/robos.jpg
 occupation: Head of Operations
 company: OpenSats
 nostr: npub1n3w4uts2r4srq3adqu9trp953dflcnw7ppn72tad4htkpsckwcmqjef6um
