--- a/data/authors/robos.mdx
+++ b/data/authors/robos.mdx
@@ -1,7 +1,7 @@
 ---
-name: Rob
-nym: BoltC
-avatar: /static/images/ops/rob.jpg
+name: robos
+nym: robos
+avatar: /static/images/ops/robos.jpg
 occupation: Head of Operations
 company: OpenSats
 nostr: npub1n3w4uts2r4srq3adqu9trp953dflcnw7ppn72tad4htkpsckwcmqjef6um
@@ -9,19 +9,11 @@ email: rob@opensats.org
 ops: true
 ---
 
-Rob believes Bitcoin will continue to transform the world for the better. He
-initially wrote off Bitcoin as he didn't see how it could fulfill the promises
-of the white paper. Once he spent the time to better understand Bitcoin and the
-Lightning network, he couldn't help but go deeper. Rob is an experienced
-software project manager who has led projects across the globe. He hopes that
-his work at OpenSats can help progress the Bitcoin and Nostr ecosystems so that
-more people globally have access to the world's best money and the beauty of
-decentralized communication. With these tools, he believes that we can build
-stronger communities and resist those who wish to control our freedoms.
-
-Rob loves seeing the world, meeting new people, and reading. When he isn't
-learning about Bitcoin or macroeconomics, he is immersed in learning Japanese in the
-mountains of Japan.
+Robos firmly believes Bitcoin and Nostr will continue to transform the world for
+the better. He is an experienced software project manager who has led projects
+across the globe but ended up in the mountains of Japan, immersed in the
+language and culture. He wants to see Bitcoin and Nostr flourish across Japan,
+and also runs [Bush Bash Japan](https://bushbashjapan.fyi/).
 
 ---
 
@@ -92,3 +84,6 @@ afE4O5txpLdG0jXnuYOyaOPfqKV/C4a1t11m3XTwk31Q6pQsIMG6
 =fxH2
 -----END PGP PUBLIC KEY BLOCK-----
 ```
+
+
+
