docs: update Gigi's bio with additional projects and role change
- Add mention of various projects launched and contributed to
- Expand description of bitcoin-resources.com and nostr-resources.com
- Add information about Sovereign Engineering program launched in 2023
- Update role from 'head of strategy and operations' to 'president and executive director'
- Improve paragraph structure and formatting

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -14,18 +14,28 @@ Gigi is the author of [21 Lessons](https://21lessons.com/), a popular book abou
 lessons learned from falling down the Bitcoin rabbit hole. His current
 work-in-progress book, [21 Ways](https://21-ways.com/), tries to illuminate
 Bitcoin from multiple angles, using metaphors from biology, physics,
-engineering, and other disciplines. He is the creator and maintainer
+engineering, and other disciplines. In addition to writing books, he launched
+and contributed to [various projects](https://dergigi.com/projects) over the years.
+
+He is the creator and maintainer
 of [bitcoin-resources.com](https://bitcoin-resources.com/) and
-[nostr-resources.com](https://nostr-resources.com/), a comprehensive list of
-educational resources around bitcoin and nostr, respectively. In 2019 he
-launched the German-speaking Bitcoin podcast
+[nostr-resources.com](https://nostr-resources.com), a comprehensive list of
+curated books, articles, podcasts, and other resources that help to provide a
+multi-faceted understanding of Bitcoin & nostr.
+
+In 2019 he launched the German-speaking Bitcoin podcast
 \"[Einundzwanzig](https://einundzwanzig.space/)\" with one of his co-hosts which
 turned into a community movement that now spans [multiple
-countries](https://twentyone.world/). He is passionate about privacy, human
-rights, and freedom technology. As the head of strategy and operations at
-OpenSats, he spends most of his day thinking about how to best support the
-development of free and open-source software as we transition towards an
-increasingly bitcoinized world.
+countries](https://twentyone.world/). In 2023 he launched [Sovereign
+Engineering](https://sovereignengineering.io/), a program for freedom tech
+builders that is dedicated to high-bandwidth collaboration, in-person
+communication, and iterative experimentation. He is passionate about privacy,
+human rights, and freedom technology.
+
+As the president and executive director of [OpenSats](https://opensats.org/), he
+spends most of his day thinking about how to best support the development of
+free and open-source software as we transition towards an increasingly
+bitcoinized world.
 
 ---
 
