Fix nostr-resources.com URL formatting to include trailing slash

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -19,7 +19,7 @@ and contributed to [various projects](https://dergigi.com/projects) over the yea
 
 He is the creator and maintainer
 of [bitcoin-resources.com](https://bitcoin-resources.com/) and
-[nostr-resources.com](https://nostr-resources.com), a comprehensive list of
+[nostr-resources.com](https://nostr-resources.com/), a comprehensive list of
 curated books, articles, podcasts, and other resources that help to provide a
 multi-faceted understanding of Bitcoin & nostr.
 
