--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -51,7 +51,7 @@ Every little bit helps. Thank you for your support!
 
 [ops]: /funds/ops
 [Volunteer]: mailto:volunteer@opensats.org
-[Spread the word]: http://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
+[Spread the word]: https://njump.to/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
 
 ---
 
