refactor: replace njump.me with njump.to in author bio
- Update dtonon.mdx to reference njump.to instead of njump.me

--- a/data/authors/dtonon.mdx
+++ b/data/authors/dtonon.mdx
@@ -18,7 +18,7 @@ experience with helpful and pleasant tools.
 From mid-2022 on, he is following Nostr's development, where he is actively
 involved in the design of major clients, most notably [Gossip](https://github.com/mikedilger/gossip) and [Coracle.social](https://coracle.social), as
 well as various tools such as the [Njump](https://github.com/fiatjaf/njump) static content gateway[^1] that is live on
-[njump.me](https://njump.me).
+[njump.to](https://njump.to).
 
 He is passionate about design, user experience and software development, he puts
 accessibility, sustainability and privacy as the core values of his activities.
