--- a/data/projects/tor.mdx
+++ b/data/projects/tor.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'The Tor Project'
+title: 'Tor'
 dateAdded: '2022-12-30'
 summary: 'The Tor Project advances human rights and defends your privacy online through free software and open networks.'
 nym: 'The Tor Project'
