Fix capitalization of NoStrudel in blog post

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -51,7 +51,7 @@ The seven clients highlighted in this report are:
 - [Coracle](#coracle)
 - [Damus](#damus)
 - [Jumble](#jumble)
-- [noStrudel](#nostrudel)
+- [NoStrudel](#nostrudel)
 - [Nostur](#nostur)
 - [Zap.stream](#zapstream)
 
