Refactor Nostur client feature descriptions for accuracy and clarity
Grantee suggested edits for more accuracy and clarity.

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -516,18 +516,17 @@ within the nostr network.
 [Nostur] is an iOS and macOS client designed to make nostr feel familiar to
 users coming from mainstream social apps while still preserving the protocol's
 core principles of openness and user control. Over the past year, development
-has focused on improving private communication, expanding media options,
-reducing onboarding friction, and reinforcing decentralized relay usage. With
-[OpenSats' support](/blog/nostr-grants-october-2023), Fabian delivered a series
-of releases that brought Nostur closer to a full-featured, privacy-respecting
-social experience on Apple platforms.
+has focused on expanding media options, reducing onboarding friction, and
+reinforcing decentralized relay usage. With [OpenSats'
+support](/blog/nostr-grants-october-2023), Fabian delivered a series of releases
+that brought Nostur closer to a full-featured, privacy-respecting social
+experience on Apple platforms.
 
-Private messaging received a notable upgrade with the introduction of voice
-messages—short [audio notes called Yaks]. This addition closes a usability gap
-between nostr clients and mainstream messengers, allowing users to send quick
-recordings without switching apps. Because voice messages operate fully within
-the nostr ecosystem, they bring this convenience without relying on external
-communication channels.
+Notes received an upgrade with the introduction of voice messages—short [audio
+notes called Yaks]. This addition closes a usability gap between nostr clients
+and mainstream messengers, allowing users to post quick recordings without
+switching apps. Because voice messages operate fully within the nostr ecosystem,
+they bring this convenience without relying on external communication channels.
 
 Media handling improved as well with the implementation of [picture-first
 posting], powered in part by Olas's photo-focused approach, along with native
@@ -569,10 +568,10 @@ control.
 
 Within the Apple ecosystem, Nostur is steadily becoming a more capable,
 privacy-oriented client that remains simple to use. Voice messages (Yaks) give
-users an alternative way to send DMs, decentralized media uploads give creators
-more control, and feed and outbox improvements make it easier for users to find
-and follow meaningful content. OpenSats' support made it possible for Nostur to
-expand its feature set while staying aligned with nostr's principle of
+users an alternative way to post a message, decentralized media uploads give
+creators more control, and feed and outbox improvements make it easier for users
+to find and follow meaningful content. OpenSats' support made it possible for
+Nostur to expand its feature set while staying aligned with nostr's principle of
 user-driven networks.
 
 [Nostur]: https://nostur.com/
