Two small stylistic edits
- "Voice messages (Yaks)..." to just "Yaks.."
- ...post a message..." change to "...post messages..."

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -567,11 +567,11 @@ control.
 > <cite>—Fabian</cite>
 
 Within the Apple ecosystem, Nostur is steadily becoming a more capable,
-privacy-oriented client that remains simple to use. Voice messages (Yaks) give
-users an alternative way to post a message, decentralized media uploads give
-creators more control, and feed and outbox improvements make it easier for users
-to find and follow meaningful content. OpenSats' support made it possible for
-Nostur to expand its feature set while staying aligned with nostr's principle of
+privacy-oriented client that remains simple to use. Yaks give users an
+alternative way to post messages, decentralized media uploads give creators more
+control, and feed and outbox improvements make it easier for users to find and
+follow meaningful content. OpenSats' support made it possible for Nostur to
+expand its feature set while staying aligned with nostr's principle of
 user-driven networks.
 
 [Nostur]: https://nostur.com/
