Add link to The Nostr Fund in blog post

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -670,7 +670,7 @@ can keep pushing nostr toward a future where people everywhere can speak,
 coordinate, and move value without asking for permission.
 
 If you believe in building and maintaining censorship-resistant communication
-infrastructure, consider supporting The Nostr Fund. Every donation directly
+infrastructure, consider supporting [The Nostr Fund](/funds/nostr). Every donation directly
 helps independent developers ship open-source software that keeps users in
 control.
 
