feat(projects): add anchor link support for Related Announcements section
- Add id='announcements' to Related Announcements section in project pages
- Update damus project link to include #announcements anchor

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -349,7 +349,7 @@ goal of user-controlled infrastructure.
 
 [Damus]: https://damus.io/
 [Notedeck]: https://damus.io/notedeck/
-[several rounds of support]: /projects/damus
+[several rounds of support]: /projects/damus#announcements
 [July 2023]: /blog/nostr-grants-july-2023
 [integrate Nostr Wallet Connect]: https://github.com/damus-io/damus/commit/c837f3e78d3282204f8cc3cc372a0a01eca9d3da
 [Terry Yiu]: https://github.com/tyiu
