fix(blog): update following.space link to website URL
Change following.space project link from GitHub repository to the actual project website

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -358,7 +358,7 @@ goal of user-controlled infrastructure.
 [Will Casarin]: https://github.com/jb55
 [web-of-trust reply sorter]: https://github.com/damus-io/damus/pull/3067
 [integrated]: https://github.com/damus-io/damus/commit/36a9e81ab1d5c8807db7c3d865c4ea371c678ce2
-[following.space project]: https://github.com/callebtc/following.space
+[following.space project]: https://following.space/
 [integrated directly into columns]: https://github.com/damus-io/notedeck/releases/tag/v0.4.0
 [reworked thread rendering]: https://github.com/damus-io/notedeck/pull/900
 [implemented a notifications view]: https://github.com/damus-io/notedeck/pull/1086
