Remove repeated markdown link
Removed unnecessary HTML entities from the summary.

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -9,7 +9,7 @@ summary: "OpenSats welcomes Andrew Toth as an LTS grantee."
 ---
 
 OpenSats is pleased to announce its long-term support for [Andrew Toth] in
-recognition of his ongoing [contributions to Bitcoin Core]. His work has focused
+recognition of his ongoing contributions to Bitcoin Core. His work has focused
 on performance and privacy enhancements that improve the experience of running a
 fully validating node.
 
