content: replace general fund button with recurring donation button in LTS grant post

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -52,7 +52,7 @@ our donors. To continue supporting contributors like Andrew Toth and our [other
 LTS grantees], please consider donating to the [General Fund].
 
 <center>
-    <DonateToGeneralFundButton/>
+    <DonateRecurringButton/>
 </center>
 
 [Andrew Toth]: https://github.com/andrewtoth
