content: rephrase donation call-to-action to encourage recurring donations

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -48,8 +48,8 @@ Our [mission] at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin ecosystem.
 
 The OpenSats [Long-Term Support program] is made possible by the generosity of
-our donors. To continue supporting contributors like Andrew Toth and our [other
-LTS grantees], please consider donating to the [General Fund].
+our donors. To help ensure sustainable funding for contributors like Andrew Toth
+and our [other LTS grantees], please consider setting up a recurring donation.
 
 <center>
     <DonateRecurringButton/>
