content: add General Fund reference to recurring donation call-to-action

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -49,7 +49,7 @@ maintainers of critical open-source infrastructure within the Bitcoin ecosystem.
 
 The OpenSats [Long-Term Support program] is made possible by the generosity of
 our donors. To help ensure sustainable funding for contributors like Andrew Toth
-and our [other LTS grantees], please consider setting up a recurring donation.
+and our [other LTS grantees], please consider making a recurring donation to our [General Fund].
 
 <center>
     <DonateRecurringButton/>
