content: change period to colon after General Fund reference

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -50,7 +50,7 @@ maintainers of critical open-source infrastructure within the Bitcoin ecosystem.
 The OpenSats [Long-Term Support program] is made possible by the generosity of
 our donors. To help ensure sustainable funding for contributors like Andrew Toth
 and our [other LTS grantees], please consider making a recurring donation to our
-[General Fund].
+[General Fund]:
 
 <center>
     <DonateRecurringButton/>
