content: update Electrum Personal Server link to show Andrew Toth's commits

--- a/data/blog/andrew-toth-receives-lts-grant.mdx
+++ b/data/blog/andrew-toth-receives-lts-grant.mdx
@@ -66,7 +66,7 @@ and our [other LTS grantees], please consider making a recurring donation to our
 [PSBTs]: https://bitcoinops.org/en/topics/psbt/
 [bitcoinjs]: https://github.com/bitcoinjs/bip174/pull/41
 [rust-bitcoin]: https://github.com/rust-bitcoin/rust-wallet/pull/35
-[Electrum Personal Server]: https://github.com/chris-belcher/electrum-personal-server/blob/master/release-notes
+[Electrum Personal Server]: https://github.com/chris-belcher/electrum-personal-server/commits?author=andrewtoth
 [IBD and block-connection performance]: https://github.com/bitcoin/bitcoin/pull/31132
 [private transaction broadcast]: https://github.com/bitcoin/bitcoin/pull/29415
 [mission]: https://opensats.org/mission
