Add 'clients' tag to Advancements in Nostr Clients post

--- a/data/blog/advancements-in-nostr-clients.mdx
+++ b/data/blog/advancements-in-nostr-clients.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Advancements in Nostr Clients'
 date: '2025-12-01'
-tags: ['OpenSats', 'nostr', 'impact']
+tags: ['OpenSats', 'nostr', 'impact', 'clients']
 authors: ['default', 'arvin', 'dergigi']
 images: ['/static/images/blog/88-advancements-in-nostr-clients.jpg']
 draft: false
