Update to correct author (again) to correct handle

--- a/data/blog/opensats-receives-dollar250k-donation-from-tether.mdx
+++ b/data/blog/opensats-receives-dollar250k-donation-from-tether.mdx
@@ -2,7 +2,7 @@
 title: "OpenSats Receives $250,000 Donation From Tether"
 date: '2025-10-16'
 tags: ['OpenSats', 'funding', 'donations']
-authors: ['modl21', 'dergigi']
+authors: ['odell', 'dergigi']
 images: ['/static/images/blog/90-opensats-receives-donation-from-tether.jpg']
 draft: false
 summary: "Tether is supporting OpenSats with a $250,000 donation."
