--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -7,3 +7,38 @@ images: ['/static/images/blog/TODO.jpg']
 draft: false
 summary: "OpenSats receives a recurring donation commitment from Steak 'n Shake."
 ---
+
+OpenSats is pleased to announce that [Steak 'n
+Shake](https://www.steaknshake.com/), a classic American burger chain accepting
+bitcoin payments, has launched a [Bitcoin Meal
+promotion](https://xcancel.com/SteaknShake/status/1984298263508324442) that will
+provide ongoing support for open-source development.
+
+Over the next 12 months, Steak 'n Shake will donate 210 sats from every Bitcoin
+Meal it sells to OpenSats, turning everyday orders into direct support for
+Bitcoin and freedom tech contributors.
+
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Steak n Shake is announcing the creation of a Strategic Bitcoin Reserve. All payments received in Bitcoin will be placed in our SBR. 🚀<br><br>We are donating 210 sats from every Bitcoin meal we sell to Open Sats Initiative, Inc. over the next 12 months. 🧡<br><br>Make your Bitcoin...</p>&mdash; Steak &#39;n Shake (@SteaknShake) <a href="https://twitter.com/SteaknShake/status/1984298263508324442?ref_src=twsrc%5Etfw">October 31, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+Open Sats Initiative, Inc. is a 501(c)(3) public charity supporting a
+sustainable ecosystem of funding for free and open-source projects and
+contributors, and does not take a cut of donations to its [funds](/funds); 100%
+of those donations are passed through to grantees, while a separate [Operations
+Budget](/funds/ops) covers administrative and operational expenses.
+
+Steak 'n Shake's commitment adds continuous and bitcoin-denominated support for
+the developers, researchers, designers, and educators working on Bitcoin and
+related public infrastructure. We appreciate their decision to connect their
+bitcoin activity directly to open-source funding, and we thank everyone who
+chooses to participate by ordering a Bitcoin Meal and paying with bitcoin.
+
+If you share our commitment to free and open-source software for Bitcoin and
+freedom tech, you can support OpenSats by donating to one of [our
+funds](/funds).
+
+<center>
+  <DonateRecurringButton />
+</center>
+
+If you are a developer working on free and open-source bitcoin and nostr
+projects, we encourage you to [apply for funding](/apply).
