Remove block quote to embed post, add image file path for screenshot instead

--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -18,7 +18,7 @@ Over the next 12 months, Steak 'n Shake will donate 210 sats from every Bitcoin
 Meal it sells to OpenSats, turning everyday orders into direct support for
 Bitcoin and freedom tech contributors.
 
-<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">Steak n Shake is announcing the creation of a Strategic Bitcoin Reserve. All payments received in Bitcoin will be placed in our SBR. 🚀<br><br>We are donating 210 sats from every Bitcoin meal we sell to Open Sats Initiative, Inc. over the next 12 months. 🧡<br><br>Make your Bitcoin...</p>&mdash; Steak &#39;n Shake (@SteaknShake) <a href="https://twitter.com/SteaknShake/status/1984298263508324442?ref_src=twsrc%5Etfw">October 31, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+![](/static/images/blog/steak-n-shake-tweet-oct-31-2025/opensats-receives-donation-commitment-from-steak-n-shake.png)
 
 Open Sats Initiative, Inc. is a 501(c)(3) public charity supporting a
 sustainable ecosystem of funding for free and open-source projects and
