Change div to center for tweet/post display
Updated HTML structure for image alignment.

--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -18,12 +18,12 @@ Over the next 12 months, Steak 'n Shake will donate 210 sats from every Bitcoin
 Meal it sells to OpenSats, turning everyday orders into direct support for
 Bitcoin and freedom tech contributors.
 
-<div className="flex justify-center my-6">
+<center>
   <img
     src="/static/images/blog/steak-n-shake-tweet-oct-31-2025.png"
     alt="Steak ’n Shake OpenSats donation tweet"
   />
-</div>
+</center>
 
 Open Sats Initiative, Inc. is a 501(c)(3) public charity supporting a
 sustainable ecosystem of funding for free and open-source projects and
