--- a/data/blog/opensats-receives-dollar250k-donation-from-tether.mdx
+++ b/data/blog/opensats-receives-dollar250k-donation-from-tether.mdx
@@ -18,7 +18,7 @@ As a 501(c)(3) public charity, OpenSats directs 100% of donations to our
 projects and builders, while separate contributions to our [Operations
 Budget](/funds/ops) cover our administrative and operational expenses.
 
-Support from organizations like Tether helps us sustain our grant giving model
+Support from organizations like Tether helps us sustain our grant-giving model
 and allows us to continue sending bitcoin directly to developers, researchers,
 educators, and maintainers working on critical infrastructure.
 
