fix(blog): avoid hydration error in Steak 'n Shake post

--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -18,7 +18,14 @@ Over the next 12 months, Steak 'n Shake will donate 210 sats from every Bitcoin
 Meal it sells to OpenSats, turning everyday orders into direct support for
 Bitcoin and freedom tech contributors.
 
-[![Steak ’n Shake OpenSats donation tweet](/static/images/blog/steak-n-shake-announcement-tweet-oct-31-2025.png)](https://x.com/SteaknShake/status/1984298263508324442)
+<div className="text-center">
+  <a href="https://x.com/SteaknShake/status/1984298263508324442">
+    <img
+      src="/static/images/blog/steak-n-shake-announcement-tweet-oct-31-2025.png"
+      alt="Steak ’n Shake OpenSats donation tweet"
+    />
+  </a>
+</div>
 
 Open Sats Initiative, Inc. is a 501(c)(3) public charity supporting a
 sustainable ecosystem of funding for free and open-source projects and
@@ -36,9 +43,9 @@ If you share our commitment to free and open-source software for Bitcoin and
 freedom tech, you can support OpenSats by donating to one of [our
 funds](/funds).
 
-<center>
-  <DonateRecurringButton />
-</center>
+<div className="text-center">
+  <DonateRecurringButton />
+</div>
 
 If you are a developer working on free and open-source bitcoin and nostr
 projects, we encourage you to [apply for funding](/apply).
