--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -18,11 +18,17 @@ Over the next 12 months, Steak 'n Shake will donate 210 sats from every Bitcoin
 Meal it sells to OpenSats, turning everyday orders into direct support for
 Bitcoin and freedom tech contributors.
 
-<div className="text-center">
-  <a href="https://x.com/SteaknShake/status/1984298263508324442">
+<div className="my-8">
+  <a
+    href="https://x.com/SteaknShake/status/1984298263508324442"
+    target="_blank"
+    rel="noopener noreferrer"
+    className="flex justify-center"
+  >
     <img
       src="/static/images/blog/steak-n-shake-announcement-tweet-oct-31-2025.png"
       alt="Steak ’n Shake OpenSats donation tweet"
+      className="max-w-full"
     />
   </a>
 </div>
