chore(blog): soften appreciation phrasing in Steak 'n Shake post

--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -41,9 +41,9 @@ Budget](/funds/ops) covers administrative and operational expenses.
 
 Steak 'n Shake's commitment adds continuous and bitcoin-denominated support for
 the developers, researchers, designers, and educators working on Bitcoin and
-related public infrastructure. We appreciate their decision to connect their
-bitcoin activity directly to open-source funding, and we thank everyone who
-chooses to participate by ordering a Bitcoin Meal and spending sats.
+related public infrastructure. We deeply appreciate their decision to connect
+their bitcoin activity directly to open-source funding, and we thank everyone
+who chooses to participate by ordering a Bitcoin Meal and spending sats.
 
 If you share our commitment to free and open-source software for Bitcoin and
 freedom tech, you can support OpenSats by donating to one of [our
