--- a/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
+++ b/data/blog/opensats-receives-donation-commitment-from-steak-n-shake.mdx
@@ -43,7 +43,8 @@ Steak 'n Shake's commitment adds continuous and bitcoin-denominated support for
 the developers, researchers, designers, and educators working on Bitcoin and
 related public infrastructure. We deeply appreciate their decision to connect
 their bitcoin activity directly to open-source funding, and we thank everyone
-who chooses to participate by ordering a Bitcoin Meal and spending sats.
+who chooses to participate by ordering a Bitcoin Meal and spending their
+hard-earned sats.
 
 If you share our commitment to free and open-source software for Bitcoin and
 freedom tech, you can support OpenSats by donating to one of [our
